# reddit-analytics-pipeline

./: .gitignore  README.md  main.py  pyproject.toml
airflow/: Dockerfile  airflow.cfg  airflow.db  docker-compose.yml  requirements.txt  standalone_admin_password.txt
airflow/dags/: github_pipeline.py
github_analytics/: .user.yml  dbt_project.yml  profiles.yml
github_analytics/models/marts/: dim_actors.sql  dim_repos.sql  fct_events.sql  fct_pr_events.sql  fct_push_events.sql  github_daily_activity.sql  github_hourly_activity.sql  github_platform_metrics.sql  github_repo_summary.sql  github_trending_repos.sql  schema.yml
github_analytics/models/staging/: schema.yml  sources.yml  stg_github_events.sql
ingestion/batch/: github_ingestion.py  ingestion.py  reddit_ingestion.py  test_gcp.py
processing/spark/: explore_data.ipynb  transform.py
